--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <header>
-        <h1 class="title">Links to Python,Javascript,React and flask</h1>
+        <h1 class="title">Links to Python,Javascript,React,flask and Git</h1>
     </header>
-    <div class="javascript">
+    <div class="languageheader">
         <h2 class="head">Javascript</h2>
         <div class="contentContainer">
             <a href="https://github.com/learn-co-curriculum/phase-1-review-strings-lab" class="content">Strings Lab</a>
@@ -168,6 +168,103 @@
             <a href="https://github.com/learn-co-curriculum/git-github-resolving-merge-conflicts" class="content">Resolving Merge Conflicts</a>
             <a href="https://github.com/learn-co-curriculum/git-github-collaborating" class="content">Collaborating with Git and GitHub</a>
             <a href="https://github.com/learn-co-curriculum/git-github-github-profile" class="content">Building a Great GitHub Profile</a>
+        </div>
+    </div>
+    <div class="languageheader">
+        <h2>React</h2>
+        <div class="contentcontainer">
+            <h6 class="contentheader">Intro</h6>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-what-is-react" class="content">What is React?</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-intro-to-npm-readme" class="content">Intro to npm</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-npm-lab" class="content">npm Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-running-tests" class="content">Running Tests in React</a>
+            <h6 class="contentheader">Components</h6>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-components-and-props" class="content">Video: Components and Props</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-components-basics" class="content">React Components Basics</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-components-basics-lab" class="content">React Components Basics Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-import-export" class="content">Organizing Code with Import/Export</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-import-export-lab" class="content">Organizing Code with Import/Export Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-jsx" class="content">Video: JSX</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-jsx" class="content">Writing JSX</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-jsx-lab" class="content">JSX Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-conditional-rendering" class="content">Video: Conditional Rendering</a>
+            <h6 class="contenheader">Props</h6>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-props-basics" class="content">Props Basics</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-props-basics-lab" class="content">Props Basics Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-destructuring" class="content">Video: Destructuring</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-props-destructuring" class="content">Props Destructuring and Default Values
+            </a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-lists-and-keys" class="content">Video: Lists and Keys</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lists-and-keys" class="content">Lists and Keys
+            </a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lists-and-keys-lab" class="content">Lists and Keys Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-fragments" class="content">BONUS: React Fragments</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-children" class="content">BONUS: React Children</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-component-props-mini-project" class="content">Putting it All Together: Components and Props</a>
+            <h6 class="contentheader">State</h6>
+            <a href="https://scrimba.com/playlist/pBQgdHZ" class="content">Scrimba Playlist: State & Events</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-events-basics" class="content">Video: Event Basics</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-event-handling" class="content">Event Handling in React</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-event-handling-lab" class="content">Event Handling in React Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-state" class="content">Video: Using State
+            </a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-setting-state" class="content">Video: Setting State with Callback Syntax</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-state" class="content">React State</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-state-and-events-codealong" class="content">React State and Events Code-along</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-state-arrays" class="content">React State and Arrays</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-state-and-events-lab" class="content">React State Lab</a>
+            <a href="https://scrimba.com/playlist/pzvM3sb" class="content">Scrimba Playlist: Thinking in React</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-information-flow" class="content">Video: Information Flow</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-inverse-data-flow" class="content">Video: Inverse Data Flow</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-information-flow-code-along" class="content">React Information Flow</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-information-flow-lab" class="content">React Information Flow Lab</a>
+            <h6 class="contentheader">Event</h6>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-use-context" class="content">React Context</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-forms" class="content">Video: Forms and Controlled Inputs</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-forms" class="content">Controlled Components</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-forms-submit" class="content">React Forms Submit
+            </a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-forms-abstraction" class="content">BONUS: React Forms Abstraction</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-forms-lab" class="content">React Controlled Components Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-state-events-mini-project" class="content">Putting it All Together: State and Events</a>
+            <h6 class="contentheader">Side Effects and Data Fetching</h6>
+            <a href="https://scrimba.com/playlist/pn93eAw" class="content">Scrimba Playlist: Side Effects and Data Fetching</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-useeffect" class="content">Video: Side Effects and Data Fetching</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-use-effect" class="content">The useEffect Hook</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-use-effect-cleanup" class="content">The useEffect Hook - Cleaning Up</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-use-effect-lab" class="content">React useEffect Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-data-fetching" class="content">Video: useEffect with Data Fetching</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-data-fetching" class="content">Data Fetching in React
+            </a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-simple-data-fetching-lab" class="content">React Simple Data Fetching Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-fetch-crud-code-along" class="content">React Fetch CRUD Codealong</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-fetch-crud-lab" class="content">Putting it All Together: React Fetch CRUD Lab</a>
+            <a href="" class="content">React Under the Hood</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-create-react-app" class="content">Create React App</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-babel-and-react" class="content">Babel and React</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-webpack-and-react" class="content">webpack and React
+            </a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-reconciliation" class="content">Reconciliation in React</a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
+            <a href="" class="content"></a>
         </div>
     </div>
     
