--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programming notes</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <header>
@@ -245,26 +246,43 @@
             <a href="https://github.com/learn-co-curriculum/react-hooks-webpack-and-react" class="content">webpack and React
             </a>
             <a href="https://github.com/learn-co-curriculum/react-hooks-reconciliation" class="content">Reconciliation in React</a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
-            <a href="" class="content"></a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-practice-animal-shelter" class="content">Practice Challenge: Animal Shelter</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-practice-debugging-flatipotle" class="content">Debugging Practice: Flatipotle</a>
+            <h6 class="contentheader">Client-Side Routing</h6>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-react-router-intro-v6" class="content">Introduction to Client-Side Routing</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-react-router-code-along-v6" class="content">React Router Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-react-router-routes-lab-v6" class="content">Basic Routes Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-react-router-nested-routes-v6" class="content">Nested Routing Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-react-router-programmatic-navigation-v6" class="content">Programmatic Navigation Code-Along</a>
+            <h6 class="contentheader">Test-driven Development</h6>
+            <a href="https://github.com/learn-co-curriculum/js-tdd-intro-to-test-driven-development" class="content">Intro to Test-Driven Development</a>
+            <a href="https://github.com/learn-co-curriculum/js-tdd-codealong" class="content">Test-Driven Development Codealong</a>
+            <a href="https://github.com/learn-co-curriculum/js-tdd-types-of-tests" class="content">Types of tests</a>
+            <a href="https://github.com/learn-co-curriculum/js-tdd-writing-unit-tests" class="content">Writing Unit Tests</a>
+            <a href="https://github.com/learn-co-curriculum/js-tdd-writing-unit-tests-lab" class="content">Writing Unit Tests Lab</a>
+            <h6 class="contentheader">Testing React components</h6>
+            <a href="https://github.com/learn-co-curriculum/react-tdd-intro-to-react-testing" class="content">Intro to React Testing Codealong</a>
+            <a href="https://github.com/learn-co-curriculum/react-tdd-testing-user-interfaces" class="content">Testing User Interfaces</a>
+            <a href="https://github.com/learn-co-curriculum/react-tdd-testing-user-interfaces-lab" class="content">Testing User Interfaces Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-tdd-events-codealong" class="content">Working with Events</a>
+            <a href="https://github.com/learn-co-curriculum/react-tdd-testing-forms-codealong" class="content">Testing Forms</a>
+            <a href="https://github.com/learn-co-curriculum/react-tdd-testing-user-events-lab" class="content">Testing User Events Lab</a>
+            <h6 class="contentheader">AI code Generation</h6>
+            <a href="https://github.com/learn-co-curriculum/phase-2-ai-code-generation-overview" class="content">AI Code Generation Overview</a>
+            <a href="https://github.com/learn-co-curriculum/phase-2-ai-code-generation-code-along" class="content">AI Code Generation Code-along</a>
+            <h6 class="contentheader">Advanced hooks</h6>
+            <a href="https://scrimba.com/playlist/pZGZeTv" class="content">Scrimba Playlist: Advanced Hooks</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-use-ref" class="content">The useRef Hook</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-custom-hooks" class="content">Custom Hooks</a>
+            <a href="https://github.com/learn-co-curriculum/phase-2-hooks-workshop-custom-hooks" class="content">Custom Hooks Workshop</a>
+            <h6 class="contentheader">Class components</h6>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-class-components-intro" class="content">Class Components Intro</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-class-syntax-lab" class="content">Class Syntax Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-class-events" class="content">Class Methods and Event Handling</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-class-state" class="content">Using State in Class Components</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-class-setstate-lab" class="content">Class Component State and Events Lab</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-class-component-lifecycle" class="content">React Component Lifecycle</a>
+            <a href="https://github.com/learn-co-curriculum/react-hooks-component-mounting-lab" class="content">Component Mounting and Unmounting Lab</a>
         </div>
     </div>
     
