start python upto Defining OOP

--- a/index.html
+++ b/index.html
@@ -285,6 +285,35 @@
             <a href="https://github.com/learn-co-curriculum/react-hooks-component-mounting-lab" class="content">Component Mounting and Unmounting Lab</a>
         </div>
     </div>
+    <div class="languageheader">
+        <h2>Python</h2>
+        <h6 class="contentheader">Python fundamentals</h6>
+        <a href="https://github.com/learn-co-curriculum/phase-3-intro-to-python" class="content">Intro to Python</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-running-python-code" class="content">Running Python Code</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-common-python-data-types" class="content">Common Data Types</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-reading-python-error-messages" class="content">Reading Python Error Messages</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-functions" class="content">Functions in Python</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-debugging-with-ipdb" class="content">Debugging with ipdb</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-pytest" class="content">pytest</a>
+        <a href="" class="content">Variable Scope
+        </a>
+        <h6 class="contentheader">fundamentals</h6>
+        <a href="https://github.com/learn-co-curriculum/phase-3-python-control-flow-operators" class="content">Control Flow: Operators</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-conditional-statements" class="content">Control Flow: Conditional Statements</a>
+        <a href="https://github.com/learn-co-curriculum/phase-3-python-loops" class="content">Control Flow: Loops</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-v2-decorators" class="content">Decorators</a>
+        <h6 class="contentheader">Data Structures In Python</h6>
+        <a href="https://github.com/learn-co-curriculum/phase-3-intro-to-data-structures" class="content">Intro to Data Structures</a>
+        <a href="https://github.com/learn-co-curriculum/phase-3-sequences" class="content">Sequences</a>
+        <a href="https://github.com/learn-co-curriculum/phase-3-comprehensions-and-generators" class="content">List Comprehensions and Generator Expressions</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-dictionaries" class="content">Dictionaries</a>
+        <a href="https://github.com/learn-co-curriculum/phase-3-sets" class="content">Sets</a>
+        <a href="https://github.com/learn-co-curriculum/phase-3-data-structures-lab" class="content">Data Structures Lab</a>
+        <h6 class="contenheader">Object Orientation in Python</h6>
+        <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-object-oriented-programming" class="content">Intro to Object-Oriented Programming</a>
+        <a href="https://github.com/learn-co-curriculum/python-p3-defining-object-oriented-programming" class="content">Defining Object-Oriented Programming</a>
+
+    </div>
     
 </body>
 </html>
