--- a/index.html
+++ b/index.html
@@ -287,31 +287,136 @@
     </div>
     <div class="languageheader">
         <h2>Python</h2>
-        <h6 class="contentheader">Python fundamentals</h6>
-        <a href="https://github.com/learn-co-curriculum/phase-3-intro-to-python" class="content">Intro to Python</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-running-python-code" class="content">Running Python Code</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-common-python-data-types" class="content">Common Data Types</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-reading-python-error-messages" class="content">Reading Python Error Messages</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-functions" class="content">Functions in Python</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-debugging-with-ipdb" class="content">Debugging with ipdb</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-pytest" class="content">pytest</a>
-        <a href="" class="content">Variable Scope
-        </a>
-        <h6 class="contentheader">fundamentals</h6>
-        <a href="https://github.com/learn-co-curriculum/phase-3-python-control-flow-operators" class="content">Control Flow: Operators</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-conditional-statements" class="content">Control Flow: Conditional Statements</a>
-        <a href="https://github.com/learn-co-curriculum/phase-3-python-loops" class="content">Control Flow: Loops</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-v2-decorators" class="content">Decorators</a>
-        <h6 class="contentheader">Data Structures In Python</h6>
-        <a href="https://github.com/learn-co-curriculum/phase-3-intro-to-data-structures" class="content">Intro to Data Structures</a>
-        <a href="https://github.com/learn-co-curriculum/phase-3-sequences" class="content">Sequences</a>
-        <a href="https://github.com/learn-co-curriculum/phase-3-comprehensions-and-generators" class="content">List Comprehensions and Generator Expressions</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-dictionaries" class="content">Dictionaries</a>
-        <a href="https://github.com/learn-co-curriculum/phase-3-sets" class="content">Sets</a>
-        <a href="https://github.com/learn-co-curriculum/phase-3-data-structures-lab" class="content">Data Structures Lab</a>
-        <h6 class="contenheader">Object Orientation in Python</h6>
-        <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-object-oriented-programming" class="content">Intro to Object-Oriented Programming</a>
-        <a href="https://github.com/learn-co-curriculum/python-p3-defining-object-oriented-programming" class="content">Defining Object-Oriented Programming</a>
+        <div class="contentcontainer">
+
+            <h6 class="contentheader">Python fundamentals</h6>
+            <a href="https://github.com/learn-co-curriculum/phase-3-intro-to-python" class="content">Intro to Python</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-running-python-code" class="content">Running Python Code</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-common-python-data-types" class="content">Common Data Types</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-reading-python-error-messages" class="content">Reading Python Error Messages</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-functions" class="content">Functions in Python</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-debugging-with-ipdb" class="content">Debugging with ipdb</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-pytest" class="content">pytest</a>
+            <a href="" class="content">Variable Scope
+            </a>
+            <h6 class="contentheader">fundamentals</h6>
+            <a href="https://github.com/learn-co-curriculum/phase-3-python-control-flow-operators" class="content">Control Flow: Operators</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-conditional-statements" class="content">Control Flow: Conditional Statements</a>
+            <a href="https://github.com/learn-co-curriculum/phase-3-python-loops" class="content">Control Flow: Loops</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-v2-decorators" class="content">Decorators</a>
+            <h6 class="contentheader">Data Structures In Python</h6>
+            <a href="https://github.com/learn-co-curriculum/phase-3-intro-to-data-structures" class="content">Intro to Data Structures</a>
+            <a href="https://github.com/learn-co-curriculum/phase-3-sequences" class="content">Sequences</a>
+            <a href="https://github.com/learn-co-curriculum/phase-3-comprehensions-and-generators" class="content">List Comprehensions and Generator Expressions</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dictionaries" class="content">Dictionaries</a>
+            <a href="https://github.com/learn-co-curriculum/phase-3-sets" class="content">Sets</a>
+            <a href="https://github.com/learn-co-curriculum/phase-3-data-structures-lab" class="content">Data Structures Lab</a>
+            <h6 class="contenheader">Object Orientation in Python</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-object-oriented-programming" class="content">Intro to Object-Oriented Programming</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-defining-object-oriented-programming" class="content">Defining Object-Oriented Programming</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-classes-and-instances" class="content">Classes and Instances</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-instance-methods" class="content">Instance Methods</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-init-self" class="content">Object Initialization</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-attributes-and-properties" class="content">Attributes and Properties</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-v2-property-decorator" class="content">Property Function Decorator : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-oop-putting-it-all-together" class="content">Putting It All Together: Object-Oriented Programming Lab</a>
+            <h6 class="contentheader">Object-Oriented Design</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-oop-design-principles" class="content">Principles of Object-Oriented Design</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-anagram-detector-lab" class="content">Anagram Detector Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-oo-counting-sentences-lab" class="content">Counting Sentences Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-oo-cash-register-lab" class="content">Cash Register Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-non-sqlalchemy-code-challenge-articles" class="content">Phase-3 Code Challenge: Articles - Without SQL Alchemy</a>
+            <h6 class="contentheader">Object Inheritance in Python</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-object-inheritance" class="content">Intro to Object Inheritance</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-defining-object-inheritance" class="content">Defining Object Inheritance</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-super" class="content">Super
+            </a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-inheritance-lab" class="content">Object Inheritance Lab Part One</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-inheritance-lab-pt-2" class="content">Object Inheritance Lab Part Two</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-lambdas" class="content">Mini Lesson: Lambda Functions</a>
+            <h6 class="contentheader">Attributes and class methods in python</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-class-attributes-and-methods" class="content">Intro to Class Attributes and Class Methods</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-defining-class-attributes-and-methods" class="content">Defining Class Attributes and Class Methods</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-remembering-objects" class="content">Remembering Objects</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-class-attributes-and-methods-lab" class="content">Class Attributes and Methods Lab
+            </a>
+            <h6 class="contentheader">Configuring Python Applications</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-configuring-applications" class="content">Intro to Configuring Python Applications</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-import" class="content">Import</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-fileio" class="content">Intro to File IO</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-fileio-lab" class="content">File IO Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-environment-setup" class="content">Environment Setup (Code-Along)</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-pypi" class="content">PyPi and Pip</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-pip-lab" class="content">Environment Lab
+            </a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-python-scripting" class="content">Python Scripting
+            </a>
+            <h6 class="contentheader">Object Relationships</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-object-relationships" class="content">Intro to Object Relationships</a>
+            <a href="https://github.com/learn-co-curriculum/p3-one-to-many" class="content">One-to-many Object Relationships
+            </a>
+            <a href="https://github.com/learn-co-curriculum/p3-oo-one-to-many-lab" class="content">One-to-many Object Relationships Lab</a>
+            <a href="https://github.com/learn-co-curriculum/p3-oo-many-to-many" class="content">Many-to-many Object Relationships</a>
+            <a href="https://github.com/learn-co-curriculum/p3-aggregate-methods" class="content">Mini Lesson: Aggregate Methods
+            </a>
+            <a href="https://github.com/learn-co-curriculum/p3-oo-many-to-many-lab" class="content">Many-to-many Object Relationships Lab</a>
+            <h6 class="contentheader">Regular Expressions</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-regex" class="content">Intro to Regular Expressions</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-regex-basics" class="content">RegEx Basics</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-re-module" class="content">The "re" Module</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-regex-validations-lab" class="content">RegEx Validations Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-email-parser-lab" class="content">Email Parser Lab
+            </a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-regex-lab" class="content">BONUS: RegEx Matching Lab
+            </a>
+            <h6 class="contentheader">SQL Fundamentals </h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-sql" class="content">Intro to SQL</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-setting-up-sqlite" class="content">Setting up SQLite</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-database-basics" class="content">Database Basics</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-writing-db-commands-to-a-file" class="content">Writing Database Commands to a File</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-sqlite-data-types" class="content">SQLite Data Types</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-sql-crud" class="content">CRUD Operations in SQL</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-sql-queries" class="content">SQL Queries</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-organizing-bears-lab" class="content">Organizing Bears Lab</a>
+            <h6 class="contentheader">Tabke rekations in SQL</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-sql-table-relations" class="content">Intro to Table Relations in SQL</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-sql-table-relations" class="content">Intro to Table Relations in SQL</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-relational-database-basics" class="content">Relational Database Basics</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-associating-tables-with-foreign-keys" class="content">Associating Tables with Foreign Keys</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-sql-joins" class="content">SQL Joins</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-creating-join-tables" class="content">Creating Join Tables</a>
+            <h6 class="contentheader">Object-Relational Mapping</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-object-relational-mapping" class="content">Intro to Object-Relational Mapping</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-defining-object-relational-mapping" class="content">Defining Object-Relational Mapping
+            </a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-v2-mapping-python-class-to-db" class="content">Mapping A Python Class to a Database Table : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-v2-mapping-db-to-python-class" class="content">Mapping a database row to a Python object : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-v2-orm-relationships" class="content">Mapping Object Relationships : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-v2-orm-lab" class="content">ORM Lab</a>
+            <h6 class="contentheader">Data structures and Algorithms</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dsa-intro" class="content">Introduction to Data Structures and Algorithms</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dsa-using-data-structures" class="content">Using Data Structures</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dsa-set-codealong" class="content">Set Data Structure Code Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dsa-stack-data-structure" class="content">Stack Data Structure</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dsa-stack-lab" class="content">Stack Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dsa-singly-linked-list" class="content">Singly Linked List Data Structure</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dsa-doubly-linked-list" class="content">Doubly Linked List Data Structure</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dsa-tree-data-structure" class="content">Tree Data Structure</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-dsa-tree-traversal" class="content">Tree Traversal</a>
+            <h6 class="contentheader">OpenAI API intro</h6>
+            <a href="https://github.com/learn-co-curriculum/phase-3-ai-language-model-overview" class="content">Language Model Overview</a>
+            <a href="https://github.com/learn-co-curriculum/phase-3-ai-openai-api-overview-setup" class="content">OpenAI API Overview and Setup</a>
+            <a href="https://github.com/learn-co-curriculum/phase-3-ai-openai-chatcompletion-api" class="content">Chat Completions API</a>
+            <h5 class="contentheader">Mock code challenges</h5>
+            <a href="https://github.com/learn-co-curriculum/python-p3-mock-challenge-game-tracker" class="content">Mock Code Challenge - Game Tracker (Object Relationships)</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-mock-challenge-coffee-shop" class="content">Mock Code Challenge - Coffee Shop (Object Relationships)</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-mock-challenge-national-parks" class="content">Mock Code Challenge - National Parks (Object Relationships)</a>
+            <h6 class="contentheader">Python CLI</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-cli" class="content">Intro to CLIs</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-v2-cli-orm" class="content">CLI and ORM: Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-v2-cli-orm-lab" class="content">CLI Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p3-v2-final-project-template" class="content">CLI+ORM Project Template</a>
+        </div>
 
     </div>
     
